# publicRep

./: SwcEepromManager.c  SwcEepromManager.h  eepromManager.c  eepromManager.h  flashAPI.c  flashAPI.h  generateHFiles.m
PrjCoreDalCMake/prjcoredalcmake/: CMakeLists.txt  ReadMe.txt  start-make.sh  start-ninja.sh
PrjCoreDalCMake/prjcoredalcmake/build-ninja/: .ninja_deps  .ninja_log  CMakeCache.txt  Cpu0_Main_tc365.i  Cpu0_Main_tc365.s  Cpu1_Main_tc365.i  Cpu1_Main_tc365.s  IfxCpu.i  IfxCpu.s  IfxCpu_Irq.i  IfxCpu_Irq.s  IfxCpu_Trap.i  IfxCpu_Trap.s  IfxCpu_cfg.i  IfxCpu_cfg.s  IfxPmsEvr.i  IfxPmsEvr.s  IfxPmsPm.i  IfxPmsPm.s  IfxScuCcu.i  IfxScuCcu.s  IfxScuWdt.i  IfxScuWdt.s  IfxStdIf_Timer.i  IfxStdIf_Timer.s  IfxStm.i  IfxStm.s  IfxStm_Timer.i  IfxStm_Timer.s  IfxStm_cfg.i  IfxStm_cfg.s  Ifx_Cfg_Ssw.i  Ifx_Cfg_Ssw.s  Ifx_Cfg_SswBmhd.i  Ifx_Cfg_SswBmhd.s  Ifx_Ssw_Infra.i  Ifx_Ssw_Infra.s  Ifx_Ssw_Tc0.i  Ifx_Ssw_Tc0.s  Ifx_Ssw_Tc1.i  (+26 more)
PrjCoreDalCMake/prjcoredalcmake/config/: Os_Cfg.c  Os_Cfg.h  Os_HwIsrCfg.c
PrjCoreDalCMake/prjcoredalcmake/config/FreeRTOS/: FreeRTOSConfig.h  FreeRTOSConfig_277.h
PrjCoreDalCMake/prjcoredalcmake/lscripts/: Lcf_Gnuc_Tricore_TC277.lsl
PrjCoreDalCMake/prjcoredalcmake/src/: Cpu0_Main_tc277.c  Cpu0_Main_tc365.c  Cpu1_Main_tc277.c  Cpu1_Main_tc365.c  Cpu2_Main_tc277.c
